changes' is much more useful than 'misc edits' or 'code cleanup.'
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

Rewrite 'ring_desc' to use StringBuffer.
Nicolas Weeger 2010-07-28

Remove unused variable. Document.
Nicolas Weeger 2010-07-28

Remove static variable.
Nicolas Weeger 2010-07-28

Remove commented out code.
Nicolas Weeger 2010-07-28

Remove global variables.
Nicolas Weeger 2010-07-28

Fix documentation.
Nicolas Weeger 2010-07-28

Explicit why the 'accounts' file can't be opened, to help debug.
Nicolas Weeger 2010-07-28

Abort at startup if a creature one can summon has no move_type defined.
Add a redundant check for move_type 0 when summoning, set it to walk
in this case. This is a fix enforcer for bug #2791003.
Nicolas Weeger 2010-07-26

For the throwing skill, prefer items with 'is_thrown'.
This makes the player throw eg throwing daggers before other items.
Nicolas Weeger 2010-07-23

CRE: alchemy recipes report.
Nicolas Weeger 2010-07-21

CRE: display if artifacts can be generated through alchemy.
Nicolas Weeger 2010-07-21

Correctly generate readable of specified type if set.
This fixes a bug in Scorn (and elsewhere) library where
you could have alchemy recipes in the god section.
Nicolas Weeger 2010-07-19

CRE: bullet-like spells damage and cost report, praying only.
Nicolas Weeger 2010-07-18

CRE: add 'damage' to object wrapper.
Nicolas Weeger 2010-07-18

CRE: disable tree sorting for resource window, as that prevents reading
the treasure lists correctly.
Nicolas Weeger 2010-07-18

Add 'knowledge search <text>' to filter knowledge.
Nicolas Weeger 2010-07-14

Remove unused parameters.
Nicolas Weeger 2010-07-14

Don't display in summary functions, but in higher level.