@@ -14,6 +14,9 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Rewrite 'describe_monster' to use StringBuffer.
+Nicolas Weeger 2010-07-28
+
 Rewrite 'ring_desc' to use StringBuffer.
 Nicolas Weeger 2010-07-28
 
